# Project_TC_1

./: CMakeLists.txt  README.md  ai_shm.hpp  ai_shm.py  cam.cpp  can.h  drowsy.cpp  eye_seeker.py  init.c  press.h
AI/: AI_init.py  AI_shm.py  cam.py  drowny.py  eye_seeker.py  gui.py
Module A/Src/: can.c  main.c  press.c  stm32f4xx_it.c
Module A_final_a/Inc/: main.h  weight.h
Module A_final_a/Src/: can.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  weight.c
RTOS/LED_Buzz/: LED_M.c  LED_M.h  main.c
RTOS/Src/: main.c  stm32f4xx_hal_msp.c
